Bug 312249 - The back & forward button in the toolbar is ambiguous
Summary: The back & forward button in the toolbar is ambiguous
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-27 05:01 UTC by Jiajun Wang
Modified: 2013-04-17 10:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jiajun Wang 2012-12-27 05:01:17 UTC
By default, in the main toolbar, there are back & forward buttons (and the two items is also in the view menu). They can be used to navigate to the previous or next document when you open multiple files in kate. But the text "Back" and "Forward" is ambiguous because the two buttons are frequently used in browser or file manager.

When kate has been localized, the problem becomes more obvious. I am using KDE in Chinese environment, the translated text means go to the next/previous place, which has nothing to do with navigating to other files. It may make users think the button is used to go to the previous/next edit place.

Reproducible: Always




I am using the kate 3.9.4 in KDE 4.9.4.

Diving into the source code, I find the two line of code in kate/plugins/filetree/katefiletreeplugin.cpp, 
actionCollection()->addAction( KStandardAction::Back, "filetree_prev_document", m_fileTree, SLOT(slotDocumentPrev()) );
actionCollection()->addAction( KStandardAction::Forward, "filetree_next_document", m_fileTree, SLOT(slotDocumentNext()) );
The use of KStandardAction::Back & KStandardAction::Forward cause the problem.
And the problem is still in the git tree.
Comment 1 Dominik Haumann 2012-12-28 10:52:23 UTC
You mean ambiguous in the sense of bad naming? Do you have better suggestions?
Comment 2 Jiajun Wang 2012-12-30 10:00:05 UTC
(In reply to comment #1)
> You mean ambiguous in the sense of bad naming? Do you have better
> suggestions?

IMO, Previous/Next is better. (The tooltip can be 'switch to previous file/next file')
This describe what exactly will happen. And can be translated without changing the back/forward text in konqueror, dolphin, etc.
Comment 3 Dominik Haumann 2013-02-20 12:27:37 UTC
Git commit 410f74b4458b74663fa03e8a86fa6787897cebb9 by Dominik Haumann.
Committed on 20/02/2013 at 13:22.
Pushed by dhaumann into branch 'master'.

Better naming to navigate documents

Forward -> Next Document  (menu: View > Forward)
Back -> Previous Document (menu: View > Back)

@T.C.: If this is in the Kate docbook, it needs to be adapted to reflect
the new naming in KDE 4.11.

CCMAIL: tchollingsworth@gmail.com
FIXED-IN: 4.11

M  +2    -2    kate/plugins/filetree/katefiletreeplugin.cpp

http://commits.kde.org/kate/410f74b4458b74663fa03e8a86fa6787897cebb9
Comment 4 Burkhard Lück 2013-04-17 10:16:36 UTC
Git commit 2a1a97a2914bb818ffe238b06c6ab8120a444d3f by Burkhard Lück.
Committed on 17/04/2013 at 12:16.
Pushed by lueck into branch 'master'.

document changed menu strings for filetreeplugin

M  +3    -3    doc/kate/index.docbook
M  +8    -3    doc/kate/mdi.docbook
M  +2    -2    doc/kate/menus.docbook

http://commits.kde.org/kate/2a1a97a2914bb818ffe238b06c6ab8120a444d3f