Better naming to navigate documents

Forward -> Next Document  (menu: View > Forward)
Back -> Previous Document (menu: View > Back)

@T.C.: If this is in the Kate docbook, it needs to be adapted to reflect
the new naming in KDE 4.11.

CCMAIL: tchollingsworth@gmail.com
BUG: 312249
FIXED-IN: 4.11